Fixed issue with viz not showing up

--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,13 @@ section h2 {
     margin: 2rem 0;
     height: 500px;
 }
+
+#vis.vega-embed {
+    width: 100%;
+    display: flex;
+  }
+
+  #vis.vega-embed details,
+  #vis.vega-embed details summary {
+    position: relative;
+  }
